[PASELC-657] junit tests
